added multiple media types to multiapi test
